@@ -6,7 +6,6 @@
 # CMake flags :
 #   * BUILD_TYPE : Debug or Release
 #   * PROJECT_CI_DEPLOY : enable install inside the build directory
-#   * PROJECT_COVERAGE : works only on Linux, using gcov
 #
 # Install gcc-6 and lcov for coverage report. A recent version of CMake is also
 # downloaded.
@@ -27,18 +26,23 @@ matrix:
   include:
     - os: linux
       compiler: gcc-6
-      env: BUILD_TYPE=Debug CMAKE_CONFIG="-DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DPROJECT-MISC_CI_DEPLOY=on -DPROJECT-MISC_COVERAGE=off"
+      env: BUILD_TYPE=Debug CMAKE_CONFIG="-DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DPROJECT-MISC_CI_DEPLOY=on"
     - os: linux
       compiler: gcc-6
-      env: BUILD_TYPE=Release CMAKE_CONFIG="-DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DPROJECT-MISC_CI_DEPLOY=on -DPROJECT-MISC_COVERAGE=on"
+      env: BUILD_TYPE=Release CMAKE_CONFIG="-DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DPROJECT-MISC_CI_DEPLOY=on"
 
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - sourceline: 'ppa:deadsnakes/ppa'
+      - sourceline: 'ppa:adrozdoff/cmake'
     packages:
       - gcc-6
       - lcov
-    sources:
-      - ubuntu-toolchain-r-test
+      - python3.5
+      - valgrind
+      - cmake
   sonarqube:
     token:
       secure: "kDTCOlpGPj2/rudRHjsoIurDlZYmqVHwPx5WnxexeGPmufUdR+SDstPTWevrjVEb/nnWb6GRropaS+iQ7gj7f6hOkg3cmCQqy33hA41V4XFn7agsCt/SIrlhk6j/IWHmLlMM2UKgna/JrLq0oB5fF4wPMzYtxcluDifQFAfd64HIWKy6AKf1PueaCa8xKebBBIyhfsZx8Kt8C68Or0sI9CiEnG+9hSnPPdxPXEM5u1AHQXdf+6I1IwW6bSp01GkoLI/+tVYrY3jibPudXYDVpln8GIyprZoAOmVdvnNUvH3tvUTxtaaC3K29z29705vcsmYxf15jVQgXF6+Kqd0FjBhGUpOmXYrVL6zSNgwDSFM/M2SNsmGMKAMk9WE+yxtoWpFz0nsRVWT+s0PvIiv3Gv9Tyewrcw53FeHNKU8n1qHEtyTvPj0P6f058dIKA8ZRx8ZSFvDrRUdHWGyxbnZlLkRT5EHuqFgiNus2nnNLZIRNOhAEiHU+vOT4NAYNxMGAT2s3kC2sqwukLgLajdawPvpDOczVI+XlXKbZ4s+wT7joBgiy53YrAjZU9UAzSZNJ/hLOeUED24CNCgxxq1KjnY6XibpyJ5OZiF1eH+MS6SQZE9FWDJAl4HAAdu7n/5ojpruSCzmZiaH8D9rZZT6TRlNuIpQGcJx9cp8jCpK9knM="
@@ -51,12 +55,14 @@ cache:
     - '$HOME/.sonar/cache'
 
 install:
-  - wget --no-check-certificate https://cmake.org/files/v3.7/cmake-3.7.2-Linux-x86_64.tar.gz && tar -xvf cmake-3.7.2-Linux-x86_64.tar.gz
-  - cmake-3.7.2-Linux-x86_64/bin/cmake ${CMAKE_CONFIG} .
+  - valgrind --version
+  - cmake ${CMAKE_CONFIG} .
+  - sudo update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.5 1
 
 script:
   - make
   - make unit
+#  - make validate : currently disabled
 
 after_success:
   - if [[ "${BUILD_TYPE}" = "Release" && ("${TRAVIS_BRANCH}" = "master" || ${TRAVIS_BRANCH} = "develop") ]]; then make coverage; fi
@@ -66,10 +72,10 @@ after_success:
 # On release builds, in case of tag (only on master), the binaries will be deployed. To do this, we clean all that have been build, build Debug, install it and do the same for Release.
 before_deploy:
   - make clean
-  - cmake-3.7.2-Linux-x86_64/bin/cmake -DCMAKE_BUILD_TYPE=Debug -DPROJECT-MISC_CI_DEPLOY=on -DPROJECT-MISC_COVERAGE=off .
+  - cmake-3.7.2-Linux-x86_64/bin/cmake -DCMAKE_BUILD_TYPE=Debug -DPROJECT-MISC_CI_DEPLOY=on .
   - make
   - make install
-  - cmake-3.7.2-Linux-x86_64/bin/cmake -DCMAKE_BUILD_TYPE=Release -DPROJECT-MISC_CI_DEPLOY=on -DPROJECT-MISC_COVERAGE=off .
+  - cmake-3.7.2-Linux-x86_64/bin/cmake -DCMAKE_BUILD_TYPE=Release -DPROJECT-MISC_CI_DEPLOY=on .
   - make
   - make install
   - make dist
